--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,7 @@ stages:
         command: buildAndPush
         repository: $(imageRepository)
         dockerfile: $(dockerfilePath)
+        buildContext: $(Build.Repository.LocalPath)
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
